# LCEMP

./: .gitignore  CMakeLists.txt
Minecraft.Client/Windows64/: Windows64_Minecraft.cpp
